--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -18,3 +18,4 @@ jobs:
     - uses: codecov/codecov-action@v1.0.3
       with:
         token: ${{secrets.CODECOV_TOKEN}}
+        file: build/reports/jacoco/test/jacocoTestReport.xml
