--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -8,16 +8,20 @@ jobs:
     runs-on: ubuntu-latest
         
     steps:
+
     - uses: actions/checkout@master
+
     - uses: actions/cache@v1
       with:
         path: ~/.gradle/caches
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/.gradle') }}
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/build.gradle.kts') }}
         restore-keys: |
           ${{ runner.os }}-gradle-
+
     - uses: actions/setup-java@v1
       with:
         java-version: 8
+
     - uses: eskatos/gradle-command-action@v1
       with:
         arguments: check jacocoTestReport
