--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: ["pull_request"]
+on: ["push", "pull_request"]
 
 jobs:
   build:
@@ -25,6 +25,7 @@ jobs:
     - uses: eskatos/gradle-command-action@v1
       with:
         arguments: check jacocoTestReport
+
     - uses: codecov/codecov-action@v1.0.3
       with:
         token: ${{secrets.CODECOV_TOKEN}}
